HTML add basic layout

--- a/index.html
+++ b/index.html
@@ -12,14 +12,56 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;600&display=swap" rel="stylesheet">
-    <title>Project Title</title>
+    <title>Movie App</title>
 </head>
 
 <body>
-    <h1>Project Start Page</h1>
-    <p>test paragraph content</p>
-    <h2>heading 2 test content</h2>
-    <p>more test p content</p>
+    <header>
+        <form id="form">
+            <input type="text" id="search" class="search" placeholder="Search">
+        </form>
+    </header>
+
+    <main id="main">
+        <div class="movie">
+            <img src="assets/images/noom-peerapong-2uwFEAGUm6E-unsplash.jpg" alt="movie theatre">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique in ullam fuga, enim amet consectetur
+                doloribus cum! Delectus, consectetur officiis.
+            </div>
+        </div>
+
+        <div class="movie">
+            <img src="assets/images/noom-peerapong-2uwFEAGUm6E-unsplash.jpg" alt="movie theatre">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique in ullam fuga, enim amet consectetur
+                doloribus cum! Delectus, consectetur officiis.
+            </div>
+        </div>
+
+        <div class="movie">
+            <img src="assets/images/noom-peerapong-2uwFEAGUm6E-unsplash.jpg" alt="movie theatre">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique in ullam fuga, enim amet consectetur
+                doloribus cum! Delectus, consectetur officiis.
+            </div>
+        </div>
+    </main>
 
     <script src="assets/js/script.js"></script>
 </body>
