--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     <main id="main">
         <div class="movie">
-            <img src="assets/images/noom-peerapong-2uwFEAGUm6E-unsplash.jpg" alt="movie theatre">
+            <img src="https://images.unsplash.com/photo-1440404653325-ab127d49abc1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                alt="movie theatre">
             <div class="movie-info">
                 <h3>Movie Title</h3>
                 <span class="green">9.8</span>
