CSS: add in further styling to movie info area and overview hover box

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="assets/images/noom-peerapong-2uwFEAGUm6E-unsplash.jpg" alt="movie theatre">
             <div class="movie-info">
                 <h3>Movie Title</h3>
-                <span class="green">9.8</span>
+                <span class="red">3.8</span>
             </div>
             <div class="overview">
                 <h3>Overview</h3>
